--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "todo"
+name = "potato-rs"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,6 +7,7 @@ edition = "2021"
 scanf = "1.2.1"
 sha1 = "0.10.1"
 rand = "0.8.5"
+home = "0.5.9"
 
 [profile.release]
 codegen-untis = 1
