--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "potato-rs"
+name = "potodo"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,12 +8,13 @@ scanf = "1.2.1"
 sha1 = "0.10.1"
 rand = "0.8.5"
 home = "0.5.9"
+# cursive = "0.20.0"
+ratatui = "0.25.0"
+crossterm = "0.27.0"
+tui-textarea = "0.4.0"
 
 [profile.release]
-codegen-untis = 1
+codegen-units = 1
 lto = "fat"
 panic = "abort"
 strip = "debuginfo"
-
-[build]
-rustflags = ["-C", "target-cpu=native"]
