--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ ratatui = "0.25.0"
 crossterm = "0.27.0"
 tui-textarea = "0.4.0"
 arboard = "3.3.0"
+chrono = "0.4.31"
 
 [profile.release]
 codegen-units = 1
