--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ crossterm = "0.27.0"
 tui-textarea = "0.4.0"
 arboard = "3.3.0"
 chrono = "0.4.31"
+clap = { version = "4.4.18", features = ["derive"] }
 
 [profile.release]
 codegen-units = 1
