--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ ratatui = "0.25.0"
 crossterm = "0.27.0"
 tui-textarea = "0.4.0"
 chrono = "0.4.31"
-clap = { version = "4.4.18", features = ["derive"] }
+clap = { version = "4.4.18", features = ["derive", "string"] }
 
 [profile.release]
 codegen-units = 1
