--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ criterion = { version = "0.5", features = ["html_reports"] }
 [[bench]]
 name = "bench_500k"
 harness = false
+
+[target.'cfg(unix)'.dependencies]
+nix = {version = "0.29.0", features = ["process", "signal"]}
